[package]
name = "trd"
version = "0.1.0"
authors = ["Scott Hutton <schutton@cisco.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version = "0.2.18", features = ["full"] }
